# anonymous-account-crates

./: README.md  command.md  image_id.md  time.md
anonymous_account/host/: Cargo.toml
anonymous_account/host/src/: accounts_hash.rs  main.rs
anonymous_account/methods/guest/: Cargo.toml
anonymous_account/methods/guest/src/: accounts_hash.rs  main.rs
create-mnemoic/: Cargo.toml
create-mnemoic/src/: main.rs
