[package]
name = "guest_anonymous_account"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
subxt-signer = "0.37.0"
sp-io = "38.0.0"
sp-core = "34.0.0"
subxt-core = "0.37.0"
serde = "1.0"

[dependencies.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0"
